--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-size: 12px;
+  font-size: 16px;
   font-family: "Kumbh Sans", sans-serif;
   /* weights : 400 , 700 */
 }
@@ -98,6 +98,7 @@ h1 {
 
 .hidden-content {
   display: none;
+  color:var(--dark-grayish-blue);
 }
 
 .faq-content {
@@ -105,12 +106,22 @@ h1 {
   margin: 12px;
 }
 
-.active{
+.active {
   font-weight: 700;
 }
 
-button{
+button {
   background-color: transparent;
   border: none;
   cursor: pointer;
+}
+
+.question:hover {
+  color: var(--soft-red);
+  cursor: pointer;
+}
+
+.question {
+  color: var(--very-dark-grayish-blue);
+  padding-block: 12px;
 }
